feat: Nuevas consultas SQL
